@@ -1,4 +1,15 @@
-
+https://bugzilla.redhat.com/show_bug.cgi?id=979846
+https://bugzilla.redhat.com/show_bug.cgi?id=963994
+https://bugzilla.redhat.com/show_bug.cgi?id=811726
+https://bugzilla.redhat.com/show_bug.cgi?id=830065
+https://bugzilla.redhat.com/show_bug.cgi?id=804531
+https://bugzilla.redhat.com/show_bug.cgi?id=718717
+https://bugzilla.redhat.com/show_bug.cgi?id=864226
+https://bugzilla.redhat.com/show_bug.cgi?id=967664
+https://bugzilla.redhat.com/show_bug.cgi?id=719835
+https://bugzilla.redhat.com/show_bug.cgi?id=719832
+https://bugzilla.redhat.com/show_bug.cgi?id=697364
+ 
 Publican 3.1:
 
 Style Changes:
