@@ -757,6 +757,18 @@ img {
        padding-left: 1em;
 }
 
+.equation {
+	border-left: 3px solid #aaaaaa;
+	background-color: #ffffff;
+	padding-top: 1px;
+	padding-bottom: 0.1em;
+	padding-left: 1em;
+}
+
+.equation-contents {
+	margin-left: 4em;
+}
+
 div.title {
        margin-bottom: 1em;
        font-weight: 14px;
